--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
 h1 {
     color: green;
 }
+
+
+/* always at bottom */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: aqua;
+}
