--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%- include('partials/header.ejs') %>
 
-    <link rel="stylesheet" href="/style.css">
-    <title>TEST EJS</title>
-</head>
+
 <body>
-    <h1>EJS is rendering!</h1>
+    <h1>I'm using a partial to render this!</h1>
+
+
+
+
+
+
+
+
+
 </body>
-</html>
+
+<br>
+<%- include('partials/footer.ejs') %>
