--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 
 
 <body>
-    <h1>I'm using a partial to render this!</h1>
+    <h1>I'm using a partial to render this!!</h1>
 
-
+    <p>Put some EJS in here, soon.</p>
 
 
 
