--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,3 +9,10 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>EJS PARTIAL HEADER</title>
 </head>
+<nav> 
+<% if (user) { %>
+    <a href="/logout">Log Out</a>
+<% } else { %>
+    <a href="/auth/google">Login with Google</a>
+<% } %>
+</nav>
