--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -7,10 +7,9 @@
 
 <body>
     <h1>This is the posts page! Should show all posts on Fidget.</h1>
-
     <p>Put some EJS in here, soon.</p>
 
-
+    <a href="new.ejs">TEST: new.ejs</a>
 </body>
 
 
