Found bug, rendering /posts as post.ejs, which was refactored to index.ejs. To comments!

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -9,7 +9,58 @@
     <h1>This is the posts page! Should show all posts on Fidget.</h1>
     <p>Put some EJS in here, soon.</p>
 
-    <a href="new">TEST: new.ejs</a>
+    <a href="posts/new">Make a Post</a>
+
+
+    <ul>
+        <li><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></a></li>
+        <li>
+            <% if (user) { %>
+                <a href="/logout">Log Out</a>
+                <% } else { %>
+                <a href="/auth/google">Login with Google</a>
+                <% } %>
+        </li>
+        <li>
+            <% if (user) { %>
+            <a href="/user">My Profile</a>
+            <% } %>
+
+        </li>
+        <li>
+            <% if (user) { %>
+            <a href="posts/new">Make a Post</a>
+            <% } %>
+        </li>
+    </ul>
+
+    <h1>Welcome to Fidget!</h1>
+    <h2>The side bar of the internet!</h2>
+    <% if (user) { %><br><br><br><br>
+        <p>Hello <%= user.name %>!</p><br>
+        <% } else { %><br><br><br><br>
+        <p>Hello Stranger</p>
+        <% } %>
+
+    <table>
+        <thead>
+            <th>Posts</th>
+            
+        </thead>
+        <tbody>
+            <% posts.forEach(function(post){ %>
+              <tr>
+                <td><%= post.title %>
+                    <% if (user) { %>
+                  <a href='/posts/<%= post._id %>'>See More!</a>
+                  <% } %>
+                    
+                </td>
+              </tr>
+              
+            <% }) %>
+        </tbody>
+    </table>
 </body>
 
 
