--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -16,8 +16,117 @@
         
     </head>
 
+
 <body>
-THIS IS THE COMMENT.EJS FORM
+
+    <ul>
+        <li><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></a></li>
+        <li>
+            <% if (user) { %>
+                <a href="/logout">Log Out</a>
+                <% } else { %>
+                <a href="/auth/google">Login with Google</a>
+                <% } %>
+        </li>
+        
+        <li>
+            <a href="/user">My Profile</a>
+        </li>
+        <li>
+            <a href="/posts">Return</a>
+        </li>
+        
+    </ul>
+
+    <h1>Welcome to Fidget!</h1>
+    <h2>The side bar of the internet!</h2>
+    
+    
+    <table>
+        <thead>
+            <th>Post</th>
+           
+        </thead>
+        <tbody>
+        
+              <tr>
+                  <td><%= post.title %></td>
+                  
+                  
+              </tr>
+           
+        </tbody>
+        <table>
+            <thead>
+                
+                <th>Content</th>
+            </thead>
+            <tbody>
+            
+                  <tr>
+                      
+                      <td><%= post.content %></td>
+                      
+                  </tr>
+               
+            </tbody>
+    </table>
+
+    <!-- Javascript/HTML for hiding edit button, revealing edit menu -->
+    <script>
+        function editPost() {
+            const editWindow = document.getElementById("edit-comment");
+            const editButton = document.getElementById("edit-button");
+            editWindow.style.display = "block"; 
+            editButton.style.display = "none";
+        };
+    </script>
+
+        <form action='/posts/<%= post._id %>?_method=DELETE' method="POST" class="delete-post"> 
+            <br><button type="submit">Delete Post</button>
+        </form>
+        <br>
+        <button onclick="editPost()" id="edit-button">Edit this post</button>
+        <br><br>
+<!-- action="/posts/<%= post._id %>/update?_method=PUT" -->
+<form id='edit-comment' action="/posts/<%= post._id %>?_method=PUT" method="POST" style="display:none" >
+    <h4>Edit this Post</h4>
+    <input type="text" id = "title" name="title" required value="Title">
+    <input type="text" id = "content" name="content" required value="Content">
+    <button type ="submit">Submit Changes</button>
+ </form>
+
+    
+    <form id='add-comment-form' method='POST' action='/posts/<%= post._id %>/comments'>
+        <h4>Leave a comment!</h4>
+        <textarea name='content'></textarea>
+        <div class="center">
+        <input type='submit' value='Add comment to Fidget!'>
+        </div>
+    </form>
+    <% if (post.comments.length) { %>
+        <table>
+            <thead>
+                <tr>
+                    <th>Comments</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% post.comments.forEach(function(c) { %>
+                    <tr>
+                        <td><%= c.content %> 
+                           
+  
+                        </td>
+                        
+                    </tr>
+               <% }); %>
+            </tbody>
+        </table>
+   <% } else { %>
+    <h4>No Comments Yet!</h4>
+    <h3>Add a comment why don't ya!</h3>
+   <% } %>
    <p><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image" class="fidget-spinner" /></p>
     
 </body>
