cleaned up index.ejs confusion.

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,13 +4,8 @@
 </head>
 
 <a href="/">TEST: Back to splash (index)</a>
-
+<h1> This is the posts/index page</h1>
 <body>
-    <h1>This is the posts page! Should show all posts on Fidget.</h1>
-    <p>Put some EJS in here, soon.</p>
-
-    <a href="posts/new">Make a Post</a>
-
 
     <ul>
         <li><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></a></li>
@@ -61,7 +56,7 @@
             <% }) %>
         </tbody>
     </table>
-</body>
-
+    <p><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></p>
+    </body>
 
 <%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
