Trying to link posts to user, or display user information from post object. Must be an error in my model relation.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
 
 <body>
-    THIS IS THE / PAGE 
+    THIS IS THE INITIAL SPLASH PAGE 
 <ul>
     <li>    
         <a href="/posts">Main Page</a>
