--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/style.css">
-        <link rel="shortcut icon" href="#" />
-        <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Mono:wght@100&family=Teko:wght@300&display=swap" rel="stylesheet"> 
-
-
+    <title>Create a Comment</title>
+</head>
         
-    </head>
+COMMENT.EJS PAGE = POST DETAIL
 
 
 <body>
@@ -41,7 +28,7 @@
     <h1>Welcome to Fidget!</h1>
     <h2>The side bar of the internet!</h2>
     
-    
+    Author: <td><%= post.title.user %></td>
     <table>
         <thead>
             <th>Post</th>
@@ -50,9 +37,7 @@
         <tbody>
         
               <tr>
-                  <td><%= post.title %></td>
-                  
-                  
+                  <td><%= post.title %></td>                  
               </tr>
            
         </tbody>
