--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto+Mono:wght@100&family=Teko:wght@300&display=swap" rel="stylesheet"> 
+<%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
     <title>Create a Post</title>
-    
-
-    
 </head>
+
 <body>
     <ul>
         <li><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></a></li>
@@ -47,3 +37,6 @@
   <p><img src="https://www.freeiconspng.com/uploads/high-resolution-fidget-spinner-black-image-17.png" width="50" alt="High Resolution Fidget Spinner Black Image"  class="fidget-spinner" /></p>
 </body>
 </html>
+
+
+<%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
