Comments.ejs (show), objects displayed. Problem is the author field in post object isn't getting any data. Must push name to author array on post save.

--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -23,7 +23,12 @@ COMMENT.EJS PAGE = POST DETAIL
         <li>
             <a href="/posts">Return</a>
         </li>
-        
+        <li>
+            <p>POST OBJECT: <%= post %> </p>
+        </li>
+        <li>
+            <p>USER OBJECT: <%= user %> </p>
+        </li>
     </ul>
 
     <h1>Welcome to Fidget!</h1>
