Mostly finished refactor away from auth. Self-select a psuedonym instead of auto populating an author. Edit Delete also works but needs form cleanup before CSS begins.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,5 @@
     <title>EJS PARTIAL HEADER</title>
 </head>
 <nav> 
-<% if (user) { %>
-    <a href="/logout">Log Out</a>
-<% } else { %>
-    <a href="/auth/google">Login with Google</a>
-<% } %>
+Welcome to Fidget 2.0
 </nav>
