--- a/views/user.ejs
+++ b/views/user.ejs
@@ -22,7 +22,7 @@
  
 
         <h1>Fidget User Page</h1>
-        <h2> <%= user.name %> </h2> <!-- Shows logged in user's name -->
+        <h2>What is Fidget?</h2> <!-- Shows logged in user's name -->
         Member since: <%= user.createdAt %> 
 
         <p>This user has made <%= user.posts.length %> posts! </p>
