--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs') %>
-<title>Login</title>
+<title>Welcome</title>
 </head>
 
 
@@ -7,36 +7,21 @@
     THIS IS THE INITIAL SPLASH PAGE 
 <ul>
     <li>    
-        <a href="/posts">Main Page</a>
-        
+        <a href="/posts">See all Posts</a>
     </li>
     <li>
-        <% if (user) { %>
-            <a href="/user">My Profile</a>
-            <% } %>
-    </li>
-    <li>
-        <% if (user) { %>
-            <a href="posts/new">Make a Post</a>
-            <% } %>
+        <a href="posts/new">Make a Post</a>
     </li>
 </ul>
    
 <h1>Welcome to Fidget 2.0!</h1>
 <h2>The side bar of the internet!</h2>
 <div id="nav">
-<% if (user) { %><br><br><br><br>
-<p>Welcome back <%= user.name %>!</p><br> <!--THIS WORKS!-->
-<% } else { %><br><br><br><br>
-<a href="/auth/google" id="asklog">Click here to view and create posts!</a>
-<% } %>
+<br><br><br><br>
+<a href="/posts" id="asklog">Click here to view and create posts!</a>
+
 </div>
-<br>
-<% if (user) { %>
-    <a href="/logout">Log Out</a>
-    <% } else { %>
-    <a href="/auth/google">Login with Google</a>
-    <% } %>
+
 </html>
 
 <%- include('partials/footer.ejs') %>
