--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/* HEADER CARRIES CSS/JS IMPORT */
+
 h1 {
     color: green;
 }
@@ -14,4 +16,28 @@ footer {
     width: 100%;
     text-align: center;
     background-color: aqua;
+}
+
+/* CUSTOM SCROLLBAR */
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px darkblue; 
+    border-radius: 10px;
+}
+   
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: blue; 
+    border-radius: 10px;
+}
+  
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: darkblue; 
 }
