--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,5 +10,15 @@
     <title>EJS PARTIAL HEADER</title>
 </head>
 <nav> 
-Welcome to Fidget 2.0
+    <ul>
+        <li>    
+            <a href="/posts">See all Posts</a>
+        </li>
+        <li>
+            <a href="posts/new">Make a Post</a>
+        </li>
+        <li>
+            <a href="/">Return Home</a>
+        </li>
+    </ul>
 </nav>
