--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,15 @@
 <%- include('partials/header.ejs') %>
-<title>Welcome</title>
+    <title>Welcome</title>
 </head>
 
 
 <body>
-    THIS IS THE INITIAL SPLASH PAGE 
+    <div class="about-fidget"> 
+        <br><br><br><br>
+        <h3>About Us</h3>
+        <p>About Fidget Section Here</p>
+    </div>
+</body>
 
-<h1>Welcome to Fidget 2.0!</h1>
-<h2>The side bar of the internet!</h2>
-<div id="nav">
-<br><br><br><br>
-<a href="/posts" id="asklog">Click here to view and create posts!</a>
-
-</div>
-
-</html>
 
 <%- include('partials/footer.ejs') %>
