--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -1,7 +1,25 @@
-<%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
-    <title>Create a Comment</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--favicon keeps giving 500 server errors only on this page, just ditch it-->
+    <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>View Fidget</title>
 </head>
-        
+<nav> 
+    <ul>
+        <li>    
+            <a href="/posts">See all Posts</a>
+        </li>
+        <li>
+            <a href="/">Return Home</a>
+        </li>
+    </ul>
+</nav>
 <body>
     THIS IS THE POST DETAIL / COMMENTS.EJS PAGE
 
