--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,51 +1,76 @@
-<%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
-    <title>Create a Post</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--favicon keeps giving 500 server errors only on this page, just ditch it-->
+    <script type="text/javascript" src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Create Fidget</title>
 </head>
-
+<nav> 
+    <ul>
+        <li>    
+            <a href="/posts">See all Posts</a>
+        </li>
+        <li>
+            <a href="/">Return Home</a>
+        </li>
+    </ul>
+</nav>
 <body>
-
+    <div class="banner-container">
         <h1>Welcome to Fidget!</h1>
         <h2>The side bar of the internet!</h2>
+    </div>
+   
+    <div class="row">
+        <!--Left column start-->
+        <div class="column-60">
+            <h3>Add New Fidget</h3>
+            <form id="new-form" action="/posts" method="POST">
+                <div class="post-form-container">
+              
+                        <input type="text" name="author" placeholder="Anon" required="required">
+
+                        <input type="text" name="title" placeholder="Give your fidget a cool title" required="required">
+
+                        <textarea id="post" name="content" placeholder="You may Fidget away, here!" required="required"></textarea>
+
+                    <div class="submit-button-container">
+                        <div class="center">
+                            <input type="submit" value="Post to Fidget!">
+                            <button><a href="/posts">Cancel</a></button>
+                        </div>  
+                    </div>
+                </div>
+              </form>
+
+
+
+        </div>
+        <!--Right column start-->
+        <div class="column-30">
+            <h3>Recent Fidgets</h3>
+            <table>
+                <tbody class="postbox">
+                    <% posts.reverse().forEach(function (post) { %>
+                      <tr>
+                        <td><%= post.title %>
+                            <a href='/posts/<%= post._id %>'>Read More!</a>
+                        </td>
+                      </tr>
+                    <% }) %>
+                </tbody>
+            </table>
+        </div>
+    </div>
     
-    <form id="new-form" action="/posts" method="POST">
-        <ul class="post-form-container">
-            <li>
-                <label>Pseudonym:</label>
-                <input type="text" name="author">
-            </li>
-            <li>
-                <label>Post Title:</label>
-                <input type="text" name="title">
-            </li>
-            <li>
-                <label>Post Content:</label>
-                <textarea id="post" name="content"></textarea>
-            </li>
-            <div class="submit-button-container">
-                <div class="center">
-                    <input type="submit" value="Post to Fidget!">
-                    <button><a href="/posts">Cancel</a></button>>
-                </div>  
-            </div>
-        </ul>
-      </form>
+    
  
 
-      <table>
-        <thead>
-            <th>Posts</th>
-        </thead>
-        <tbody>
-            <% posts.forEach(function(post){ %>
-              <tr>
-                <td><%= post.title %>
-                    <a href='/posts/<%= post._id %>'>See More!</a>
-                </td>
-              </tr>
-              
-            <% }) %>
-        </tbody>
-    </table>
 
 
 </body>
