--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!--favicon keeps giving 500 server errors only on this page, just ditch it-->
+
+    <link rel="icon" href="favicon.ico?v=1.1">
     <script type="text/javascript" src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Create Fidget</title>
+    <title>fidget 2.0</title>
 </head>
-<nav> 
-    <ul>
-        <li>    
-            <a href="/posts">See all Posts</a>
-        </li>
-        <li>
-            <a href="/">Return Home</a>
-        </li>
-    </ul>
+
+<nav class="nav-bar"> 
+
+    <form action="/posts">
+        <input type="submit" value="All Fidgets" class="navbar-button" />
+    </form>
+
+
+    <form action="/">
+        <input type="submit" value="Return to Fidget" class="navbar-button" />
+    </form>
 </nav>
-<body>
-    <div class="banner-container">
-        <h1>Welcome to Fidget!</h1>
-        <h2>The side bar of the internet!</h2>
-    </div>
-   
+<div class="title-box">
+    <h1>f i d g e t   2.0</h1>
+    <h2>The side bar of the internet!</h2>
+</div>
+   <br>
+   <br>
     <div class="row">
         <!--Left column start-->
         <div class="column-60">
@@ -46,11 +48,9 @@
                         </div>  
                     </div>
                 </div>
-              </form>
-
-
-
+            </form>
         </div>
+
         <!--Right column start-->
         <div class="column-30">
             <h3>Recent Fidgets</h3>
@@ -58,9 +58,13 @@
                 <tbody class="postbox">
                     <% posts.reverse().forEach(function (post) { %>
                       <tr>
-                        <td><%= post.title %>
-                            <a href='/posts/<%= post._id %>'>Read More!</a>
-                        </td>
+                        <div class="fidget-container">
+                            f:<%= post.title %>
+                            <br> 
+                            #:<%= post.comments.length %>
+                            <br>
+                            <a href='/posts/<%= post._id %>'>See More!</a>
+                        </div>
                       </tr>
                     <% }) %>
                 </tbody>
