Testing new links, keep running into new ? at end of routes and need to solve for deployment.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         <input type="submit" value="All Fidgets" class="navbar-button" />
     </form>
 
-    <form action="posts/new">
+    <form action="/posts/new">
         <input type="submit" value="Add New Fidget" class="navbar-button" />
     </form>
 
