--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -29,4 +29,16 @@
    <br><br>
 </body>
 
+
+
+
+
+
+
+
+<!--TEST-->
+<!--TEST-->
+<a href='/'>See Posts!</a>
+
+
 <%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
