--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="favicon.ico?v=1.1">
+    <link rel="icon" href="public/images/favicon.ico?v=1.1">
     <script type="text/javascript" src="/js/script.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <title>fidget 2.0</title>
