Removed user models and routing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,6 @@
 
 
 <!--TEST-->
-<a href='/posts'>See Posts!</a>
+<a href='/posts'>See Posts!</a><br><a href='/posts/new'>New Posts</a>
 <br><br>
 <%- include('partials/footer.ejs') %>
