Comment finally works?

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -27,6 +27,12 @@
     </table>
    <!--Need a to Top button-->
    <br><br>
+
+<!--TEST-->
+<a href='/'>Home</a><br><a href='/posts/new'>New Posts</a>
+<br><br>
+
+
 </body>
 
 
@@ -39,6 +45,6 @@
 <!--TEST-->
 <!--TEST-->
 <a href='/'>See Posts!</a>
-
+<br><br>
 
 <%- include('../partials/footer.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
