--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <nav class="nav-bar"> 
-    <!--TEST BUTTON FOR CLICKING-->
+    <!--TEST BUTTON FOR CLICKING: maybe just use JS for buttons-->
     <form action="#">
         <input type="submit" value="TEST" class="navbar-button" />
     </form>
