Buttons have to be a href links, because I get unresolved routing errors with the form submit method. Buttons aren't very pretty, but the links have a bit of a halo for easier clicking, without ruining the layout on mobile. On hover reacts only to the link itself, so user doesn't click on edges and expect a result.

--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
 
-    <link rel="icon" href="public/images/favicon.ico?v=1.1">
-    <script type="text/javascript" src="/js/script.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <title>fidget 2.0</title>
-</head>
-
-<nav class="nav-bar"> 
-
-    <form action="/posts">
-        <input type="submit" value="All Fidgets" class="navbar-button" />
-    </form>
-
-
-    <form action="/">
-        <input type="submit" value="Return to Fidget" class="navbar-button" />
-    </form>
-</nav>
-<div class="title-box">
-    <h1>f i d g e t   2.0</h1>
-    <h2>The side bar of the internet!</h2>
-</div>
    <br>
    <br>
     <div class="row">
