--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,12 @@ body { /* shrink to 90% vw */
     border: 1px solid aqua;
     border-radius: 20px;
 }
+/* POST BOXES (on new.ejs) */
+.fidget-container-new {
+    text-align: center;
+    border: 1px solid aqua;
+    border-radius: 20px;
+}
 
 /* TWO PANE NEW.EJS LAYOUT */
 .row {
@@ -93,30 +99,50 @@ textarea {
 /* NAVBAR CONTAINER */
 .nav-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-bottom: 1vh;
 }
-/* NAV BUTTON AREA */
-.nav-bar form {
-    width: 33%;
 
-}
-/* NAV BUTTON */
-.nav-bar input {
+/* NAV "BUTTONS" */
+.link-buffer {
     background-color: aqua;
     color: darkblue;
+    padding: 1em;
+    width: 30%;
+    text-align: center;
     border: 0;
-    padding: 10px;
-    width: 100%;
+    border-radius: 15px;
 }
-.nav-bar input:hover {
-    background-color: lightblue;
+
+/* Styling the Link in the "button" */
+.link-buffer a:active {
+    color: white;
+}
+.link-buffer a {
     color: darkblue;
-    box-shadow: inset 0 0 10px darkblue;
+    text-decoration: none;
+    font-family: 'Khula', sans-serif;
+    display: inline-block;     
+    position: relative;    
+    z-index: 1;
+    padding-left: 3vw; /* had to stretch clickable space for nav left, almost matches button */
+    padding-right: 3vw; /* had to stretch clickable space for nav right, almost matches button */
+    padding-top: 2vw; /* had to shrink clickable space for nav */
+    padding-bottom: 2vw; /* had to shrink clickable space for nav */
+    margin: -20vh; /* shrink buttons vertically, but they grow on extremely small ports... */
 }
-.nav-bar input:active {
-    background-color: blueviolet;
-    color: darkblue;
+.link-buffer a:hover {
+    text-decoration: underline;
 }
+
+
+
+
+
+
+
+
+/* Main title box */
 .title-box {
     text-align: center;
     border: 1px solid aqua;
