--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -32,7 +32,7 @@
                 <tbody class="postbox">
                     <% posts.reverse().forEach(function (post) { %>
                       <tr>
-                        <div class="fidget-container">
+                        <div class="fidget-container-new">
                             f:<%= post.title %>
                             <br> 
                             #:<%= post.comments.length %>
