--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -2,20 +2,17 @@
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
-<body><!--Add a container to better style posts here, maybe drop the tables-->
-
+<body>
       
-            <h3>Posts</h3>
+    <h3>Posts</h3>
         <div class="fidget-field"> 
-
             <% posts.reverse().forEach(function(post){ %>
                     <div class="fidget-container"><!--Wrap in a button to make it all clickable-->
                         <h4> <%= post.title %> </h4>
-                        Written by: <%= post.author %>
-                        <br> 
-                        Comment Total: <%= post.comments.length %>
+                        <p>-<%= post.author %>, total fidgets: <%= post.comments.length %>
+                        <br><br>
+                        <a href='/posts/<%= post._id %>'>read and comment</a></p>
                         <br>
-                        <a href='/posts/<%= post._id %>'>See More!</a>
                     </div>
             <% }) %>
         </div>
