Mostly styled new post entry containers. Time for mini post display on new.ejs (right column).

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,18 @@
 <%- include('partials/header.ejs') %>
-    <title>Welcome</title>
-</head>
+<!--HOME PAGE / ABOUT-->
 
-
+<br><br><br><br><br><br><br><br><br><br><br>
 <body>
+
     <div class="about-fidget"> 
-        <br><br><br><br>
-        <h3>About Us</h3>
-        <p>About Fidget Section Here</p>
+        <h3>- about fidget -</h3>
+        <p>fidget is a place for fidgeters to fidget. <br>
+            fidget a little, fidget a lot. fidget away all you like!
+            <br>abuse and harassment of any kind will <strong>not</strong> be tolerated. 
+            <br>fidget on respectfully. <em>-admin</em>
+        </p>
     </div>
 </body>
 
-
-
-
-<!--TEST-->
-<a href='/posts'>See Posts!</a><br><a href='/posts/new'>New Posts</a>
 <br><br>
 <%- include('partials/footer.ejs') %>
