--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
     <footer>
-    Jared Stearne - 2022 / Michael Stark - 2021
+    jared stearne (2022) / michael stark & jared stearne (2021)
     </footer>
 </html>
