--- a/views/posts/comments.ejs
+++ b/views/posts/comments.ejs
@@ -1,9 +1,8 @@
 <%- include('../partials/header.ejs') %> <!-- NOTE THAT THE DIRECTORY CHANGES -->
-<body>
-    THIS IS THE POST DETAIL / COMMENTS.EJS PAGE
+<!--SEE FIDGET DETAIL/COMMENTS PAGE-->
 
-    <h1>Welcome to Fidget!</h1>
-    <h2>The side bar of the internet!</h2>
+<body>
+    
 
 
         <h2>Title</h2>
