--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,8 +93,13 @@ body { /* shrink to 90% vw */
 /* posts/new.ejs FIDGET ELEMENT */
 .fidget-container-new {
     text-align: center;
-    border: 1px solid aqua;
+    border: 1px solid darkblue;
     border-radius: 20px;
+    margin: 5%;
+    align-items: center;
+    background-color: aliceblue;
+    box-shadow: 0px 0px 2px darkblue; 
+    padding-bottom: 2%;
 }
 /* TWO PANE NEW.EJS LAYOUT */
 .row {
@@ -122,13 +127,9 @@ body { /* shrink to 90% vw */
     background-color: aqua;
     box-shadow:0 0 15px 4px rgba(0,0,0,1);
     width: 90%;
-
-
     border: 1px solid darkblue;
     border-radius: 20px;
     margin: 5%;
-
-
     box-shadow: 0px 0px 2px darkblue; 
 }
 .post-field {
@@ -154,7 +155,6 @@ input {
 textarea {
     height: 6em;
     width: 90%;
-    
     text-align: left;
     border: 1px solid darkblue;
     border-radius: 2px;
@@ -165,7 +165,7 @@ textarea {
 }
 .submit-button-container {
     background-color: black;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     border: 1px solid darkblue;
     border-radius: 20px;
@@ -186,6 +186,7 @@ textarea {
 }
 .post-fidget-button:hover {
     background-color: darkblue;
+    cursor: pointer;
     color: white;
     width: 80%;
     text-align: center;
